--- a/src/main/resources/example.local.properties
+++ b/src/main/resources/example.local.properties
@@ -4,3 +4,8 @@ POSTGRES_DB=mmhc
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 SSL_MODE=disable
+
+GOOGLE_CLIENT_ID=google-client-id
+GOOGLE_CLIENT_SECRET=google-client-secret
+
+JWT_SECRET_TOKEN=256bit-long-password
