--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,14 +14,28 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 #  TODO Implement email login and use smtp to send verificaton token
+#  mail:
+#    host: smtp.gmail.com
+#    port: 587
+#    username: ${SMTP_EMAIL}
+#    password: ${SMTP_PASSWORD}
+#    properties:
+#      mail:
+#        smtp:
+#          auth:
+#            starttls: true
+#            enable: true
+
   mail:
-    host: smtp.gmail.com
+    host: smtp-relay.brevo.com
+    #If change need to change in MailConfig.java aswell
     port: 587
     username: ${SMTP_EMAIL}
     password: ${SMTP_PASSWORD}
     properties:
-      mail:
-        smtp:
-          auth:
-            starttls: true
-            enable: true
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
+      mail.smtp.starttls.required: true
+      mail.smtp.connectiontimeout: 5000
+      mail.smtp.timeout: 5000
+      mail.smtp.writetimeout: 5000
