Refactoring and memory improvements

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,6 +6,11 @@ spring:
     url: jdbc:postgresql://${RAILWAY_TCP_PROXY_DOMAIN}:${RAILWAY_TCP_PROXY_PORT}/${POSTGRES_DB}?sslmode=${SSL_MODE}
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
+    # By Default spring data opens 10 connections, increase as needed but 4 should be enough, saves memory
+    hikari:
+      maximum-pool-size: 4
+      minimum-idle: 1
+      idle-timeout: 300000
   jpa:
     hibernate:
       ddl-auto: update
@@ -16,6 +21,12 @@ spring:
 
   mail:
     sender_email: ${SMTP_SENDER_EMAIL}
+
+  threads:
+    virtual:
+      enabled: true
+  jmx:
+    enabled: false
 
 brevo:
   api:
