--- a/src/main/resources/example.local.properties
+++ b/src/main/resources/example.local.properties
@@ -9,3 +9,4 @@ GOOGLE_CLIENT_ID=google-client-id
 GOOGLE_CLIENT_SECRET=google-client-secret
 
 JWT_SECRET_TOKEN=256bit-long-password
+BREVO_API_KEY=apitoken
