Add APPLICATION_PROFILE configuration option

--- a/src/main/resources/example.local.properties
+++ b/src/main/resources/example.local.properties
@@ -10,3 +10,5 @@ GOOGLE_CLIENT_SECRET=google-client-secret
 
 JWT_SECRET_TOKEN=256bit-long-password
 BREVO_API_KEY=apitoken
+
+APPLICATION_PROFILE=prod or dev
