--- a/src/main/resources/example.local.properties
+++ b/src/main/resources/example.local.properties
@@ -1,3 +1,5 @@
+FRONTEND_URL=http://localhost:3000
+
 RAILWAY_TCP_PROXY_DOMAIN=localhost
 RAILWAY_TCP_PROXY_PORT=5432
 POSTGRES_DB=mmhc
@@ -12,3 +14,14 @@ JWT_SECRET_TOKEN=256bit-long-password
 BREVO_API_KEY=apitoken
 
 APPLICATION_PROFILE=prod or dev
+
+
+STRIPE_SECRET_KEY=stripe-secret-key
+
+STRIPE_WEBHOOK_SECRET=stripe-webhook-secret
+
+STRIPE_PUBLISHABLE_KEY=stripe-publishable-key
+
+STRIPE_PRICE_UBC_STUDENT=stripe-price-ubc-student
+STRIPE_PRICE_NON_UBC_STUDENT=stripe-price-non-ubc-student
+STRIPE_PRICE_NON_STUDENT=stripe-price-non-student
